--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,11 @@ tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["codec"] }
 tokio-native-tls = "0.3"
 native-tls = "0.2"
-mumble-protocol = { version = "0.4", features = ["webrtc-extensions"] }
+mumble-protocol = { path = "vendor/rust-mumble-protocol/", features = ["webrtc-extensions"] }
 tokio-tungstenite = "0.13"
 http = "0.2"
 tungstenite = "0.12"
-rtp = { git = "https://github.com/johni0702/rtp", rev = "6c0223d", features = ["rfc5764-openssl"] }
-libnice = "0.3"
+rtp = { path = "vendor/rtp", features = ["rfc5764-openssl"] }
+libnice = { path = "vendor/rust-libnice" }
 webrtc-sdp = "0.3"
 openssl = "0.10"
